--- a/404.html
+++ b/404.html
@@ -1,13 +1,9 @@
 ---
-# layout: 404
-# title: 404
-# show_title: false
+layout: 404
+title: 404
+show_title: false
 
-layout: default
-permalink: /404.html
+# layout: default
+# permalink: /404.html
 ---
 
-# 404
-# Go to [blog main](mindojune.github.io)
-
-Page not found! :(
