--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
 layout: home
 titles:
-  en: Blog
-  zh: 博客
-  zh-Hans: 博客
-  zh-Hant: 博客
+  en: Dojune's Blog
+  zh:
+  zh-Hans: 
+  zh-Hant: 
 show_title: false
 ---
