--- a/about_me.html
+++ b/about_me.html
@@ -1,4 +1,3 @@
-
 ---
 layout: page
 titles:
@@ -6,6 +5,11 @@ titles:
 show_title: true
 ---
 
-<p style="text-align: center;"><strong>Dojune</strong></p>
-<p style="text-align: center;">&nbsp;</p>
-<p style="text-align: center;"><strong>contact me at:&nbsp;wordandflesh@gmail.com</strong></p>
+<div class="layout--about_me">
+  <div class="main">
+    <div align="center">
+      <h2>dojune(</h2>
+      <h2>contact me at:&nbsp;wordandflesh@gmail.com</h2>
+    </div>
+  </div>
+</div>
