--- a/about_me.html
+++ b/about_me.html
@@ -9,7 +9,7 @@ show_title: true
   <div class="main">
     <div align="center">
       <h2>dojune(</h2>
-      <h2>contact me at:&nbsp;wordandflesh@gmail.com</h2>
+      <h2>contact me at : <a href="wordandflesh@gmail.com">wordandflesh@gmail.com</a></h2>
     </div>
   </div>
 </div>
