--- a/about_me.html
+++ b/about_me.html
@@ -2,14 +2,15 @@
 layout: page
 titles:
   en: About Me
-show_title: true
+show_title: false
 ---
 
 <div class="layout--about_me">
   <div class="main">
     <div align="center">
-      <h2>dojune</h2>
-      <h2>contact me at : <a href="wordandflesh@gmail.com">wordandflesh@gmail.com</a></h2>
+      <h1>About Me</h1>
+      <h2>Dojune</h2>
+      <h2>Contact me at : <a href="wordandflesh@gmail.com">wordandflesh@gmail.com</a></h2>
     </div>
   </div>
 </div>
