--- a/about_blog.html
+++ b/about_blog.html
@@ -2,13 +2,14 @@
 layout: page
 titles:
   en: About Blog
-show_title: true
+show_title: false
 ---
 
 <div class="layout--about_me">
   <div class="main">
     <div align="center">
-      <h2>Dojune's blog(</h2>
+      <h1>About Blog</h1>
+      <h2>Dojune's blog</h2>
       <h2>Theme Used: <a href="https://github.com/kitian616/jekyll-TeXt-theme">TeXt Theme</a></h2>
     </div>
   </div>
