--- a/about_blog.html
+++ b/about_blog.html
@@ -5,10 +5,9 @@ titles:
 show_title: false
 ---
 
-<div class="layout--about_me">
+<div class="layout--about_blog">
   <div class="main">
     <div align="center">
-      <h1>About Blog</h1>
       <h2>Dojune's blog</h2>
       <h2>Theme Used: <a href="https://github.com/kitian616/jekyll-TeXt-theme">TeXt Theme</a></h2>
     </div>
